@@ -3,9 +3,7 @@ import java.awt.*;
 import java.awt.event.ActionEvent;
 import java.io.*;
 import java.nio.file.*;
-import java.nio.file.attribute.FileAttribute;
-import java.nio.file.attribute.PosixFilePermission;
-import java.nio.file.attribute.PosixFilePermissions;
+import java.nio.file.attribute.*;
 import java.time.LocalDateTime;
 import java.util.*;
 import java.util.List;
@@ -18,7 +16,7 @@ public class KonsoleDienstProgramm {
     private static final
     Path
             HistorischDatei = Path.of(System.getProperty("user.home"), ".consoleutility_history"),
-            DirektoreiDatei = Path.of("Directory.txt");
+            DirektoreiDatei = Paths.get("Directory.txt");
     private static void hinzufugenWegDirectoreis(String direktoreiName) throws IOException {
         Files.writeString(DirektoreiDatei, direktoreiName + System.lineSeparator(),
                 StandardOpenOption.CREATE, StandardOpenOption.APPEND);
@@ -42,6 +40,10 @@ public class KonsoleDienstProgramm {
             RED = ESC + "[31m",
             RESET = ESC + "[0m";
     public static void main(String[] args) throws IOException {
+        List<String> richten = new ArrayList<>(List.of(
+                "---","--x","-w-","-wx","r--","r-x","rw-","rwx"));
+        List<Character> nummerRichten = new ArrayList<>();
+        List<String>ergebnisRichten = new ArrayList<>();
         List<String> geschichteBefehlen = loadenGeschichte();
         int index = geschichteBefehlen.size(), indexWeg = loadenWegDirectoreis().size();
         File datei;
@@ -405,6 +407,293 @@ public class KonsoleDienstProgramm {
                     hinzufugenGeschichte((index) + " | " + arg);
                     loadenWegDirectoreis().forEach(System.out::println);
                 }
+                case "--tldr","--tl" -> {
+                    hinzufugenGeschichte((index) + " | " + arg);
+                    String []allCommandsInstruction =
+                            {"",
+                                    "hinzufugen","lesen","loschen","kopieren",
+                                    "bewegen","umbenennen","taskmanageren","zeitweiligen",
+                                    "GBS","jar","pfeifen / tar.gz","schreiben",
+                                    "grep","geschichte","finden","lstkat",
+                                    "ersetzen","ertdir","lshdir","exstdirs","andriten",
+                                    "adverungen","symlink"
+                            };
+                    for(int i = 1; i < allCommandsInstruction.length; ++i) {
+                        System.out.println(i + ") " + allCommandsInstruction[i]);
+                    }
+                    System.out.println("Write the command (1,2,3,4....) for which you want to see the instruction how use: ");
+                    int commandChoose = operation.nextInt();
+                    switch(commandChoose) {
+                        case 1 -> System.out.println("Ihr Pfad (C:\\CU-ConsoleUtility) " +
+                                "java src\\\\ConsoleUtilityItself.java (Windows) " +
+                                "oder /home/CU-ConsoleUtility java src\\ConsoleUtilityItself.java (Linux)) " +
+                                "--hinzufugen / --hin [ENTER] -> " +
+                                "Dateinamen eingeben: -> (Name Ihrer Datei. Beispiel: test.txt oder ein anderer) -> [ENTER] -> " +
+                                "Dateitext eingeben: -> (Text Ihrer Datei. Beispiel: Hello_World) -> [ENTER] " +
+                                "{WENN ERFOLG} -> Text Hello_World wurde in test.txt geschrieben.");
+                        case 2 -> System.out.println("Ihr Pfad (C:\\CU-ConsoleUtility " +
+                                "java src\\ConsoleUtilityItself.java (Windows) " +
+                                "oder /home/CU-ConsoleUtility java src\\ConsoleUtilityItself.java (Linux)) " +
+                                "--lesen / --les [ENTER] -> " +
+                                "Schreiben Sie den Dateinamen, um seine Existenz zu überprüfen: " +
+                                "-> (Ihre mit --add erstellte Datei) [ENTER] -> " +
+                                "{WENN ERFOLG} -> <EXAMPLE> Hello_World (Text aus test.txt wurde gelesen)");
+                        case 3 -> System.out.println("Ihr Pfad (C:\\CU-ConsoleUtility " +
+                                "java src\\ConsoleUtilityItself.java (Windows) " +
+                                "oder /home/CU-ConsoleUtility java src\\ConsoleUtilityItself.java (Linux)) " +
+                                "--loschen / --los [ENTER] -> " +
+                                "Geben Sie den Namen der Datei ein, um die Existenz zu überprüfen: " +
+                                "-> (Ihre Datei, die Sie mit --add erstellt haben) [ENTER] -> " +
+                                "{WENN ERFOLG} -> <MESSAGE> 'Diese Datei: (Ihre Datei) wurde erfolgreich gelöscht'");
+                        case 4 -> System.out.println("Ihr Pfad (C:\\CU-ConsoleUtility " +
+                                "java src\\\\ConsoleUtilityItself.java (Windows) " +
+                                "oder /home/CU-ConsoleUtility java src\\ConsoleUtilityItself.java (Linux)) " +
+                                "--kopieren / --kop [ENTER] -> " +
+                                "Geben Sie den Namen der Datei ein, um die Existenz zu überprüfen: " +
+                                "-> (Ihre mit --add erstellte Datei) [ENTER] -> " +
+                                "Geben Sie den Namen der neuen Datei ein, in die die Informationen aus der vorherigen Datei eingefügt werden: " +
+                                "-> (Der Name der neuen Datei, in der Ihre Informationen gespeichert werden (Beispiel: copy.txt) [ENTER] -> " +
+                                "{WENN ERFOLG} -> <MESSAGE> Das Kopieren von einer Datei in eine andere war erfolgreich: (Pfad zur neuen zu kopierenden Datei)");
+                        case 5 -> System.out.println("Ihr Pfad (C:\\CU-ConsoleUtility " +
+                                "java src\\\\ConsoleUtilityItself.java (Windows) " +
+                                "oder /home/CU-ConsoleUtility java src\\ConsoleUtilityItself.java (Linux)) " +
+                                "--bewegen / --bew [ENTER] -> " +
+                                "Geben Sie den Namen der Datei ein, um die Existenz zu überprüfen: " +
+                                "-> (Ihre mit --add erstellte Datei) [ENTER] -> " +
+                                "Geben Sie den neuen Datenträger ein: -> (Systemdatenträger, auf dem Sie Ihre Datei oder Freigabe speichern möchten) -> [ENTER] -> " +
+                                "{WENN ERFOLG} -> <MESSAGE> Diese Datei wurde erfolgreich auf einen anderen Datenträger verschoben");
+                        case 6 -> System.out.println("Ihr Pfad (C:\\CU-ConsoleUtility " +
+                                "java src\\\\ConsoleUtilityItself.java (Windows) " +
+                                "oder /home/CU-ConsoleUtility java src\\ConsoleUtilityItself.java (Linux)) " +
+                                "--umbenennen / --umb [ENTER] -> " +
+                                "Schreiben Sie die Datei, die Sie umbenennen möchten: " +
+                                "-> (Ihre mit --add erstellte Datei) [ENTER] -> " +
+                                "Schreiben Sie den neuen Namen für die Datei: -> (Neuer Name für Ihre Datei) -> [ENTER] -> " +
+                                "{WENN ERFOLG} -> (Ihre Datei hat den neuen Namen erhalten)");
+                        case 7 -> System.out.println("Ihr Pfad (C:\\CU-ConsoleUtility " +
+                                "java src\\\\ConsoleUtilityItself.java (Windows) " +
+                                "oder /home/CU-ConsoleUtility java src\\ConsoleUtilityItself.java (Linux)) " +
+                                "--taskmanageren / --tas [ENTER] (für Windows-Systeme) -> " +
+                                "(Unter Windows wird das Taskmgr-Fenster mit den im Windows-System ausgeführten Tasks geöffnet. \" +\n" +
+                                "Unter Linux wird dieser Befehl nicht gestartet.)");
+                        case 8 -> System.out.println("Ihr Pfad (C:\\CU-ConsoleUtility " +
+                                "java src\\ConsoleUtilityItself.java (Windows) " +
+                                "oder /home/CU-ConsoleUtility java src\\ConsoleUtilityItself.java (Linux)) " +
+                                "--zeitweiligen / --zei [ENTER] -> " +
+                                "Name der Übergangsdatei eingeben: -> (Name der temporären Datei) -> [ENTER] -> " +
+                                "Dateierweiterung eingeben: -> (Dateierweiterung. Beispiel: .txt, .bin usw.) -> [ENTER} " +
+                                "-> <MElDUNG> 'Die Übergangsdatei wurde erfolgreich erstellt: (Pfad zu Ihrer temporären Datei)'");
+                        case 9 -> System.out.println("Ihr Pfad (C:\\CU-ConsoleUtility " +
+                                "java src\\ConsoleUtilityItself.java (Windows) " +
+                                "oder /home/CU-ConsoleUtility java src\\ConsoleUtilityItself.java (Linux)) " +
+                                "--GUI / --gi [ENTER] -> (GUI-Version für ConsoleUtility. Funktioniert unter Windows und Linux)");
+                        case 10 -> System.out.println("""
+                                Ihr Pfad (C:\\CU-ConsoleUtility \
+                                java src\\ConsoleUtilityItself.java (Windows) \
+                                oder /home/CU-ConsoleUtility java src\\ConsoleUtilityItself.java (Linux)) \
+                                --jar / --jr [ENTER] -> \
+                                Name der JAR-Datei eingeben: -> (Name der JAR-Datei. Beispiel: java.jar) -> [ENTER] -> " +
+                                {IF JAR FILE EXISTS} -> Geben Sie die Datei ein, die Sie in die JAR-Datei aufnehmen möchten: " +
+                                (Ihre Datei. Beispiel: test.txt) {ELSE} Diese JAR-Datei existiert nicht. Erstellen Sie eine neue: " +
+                                -> (die neue JAR-Datei) -> [ENTER] -> \
+                                <MELDUNG> JAR-Datei wurde erfolgreich erstellt: (Pfad zu Ihrer JAR-Datei)""");
+                        case 11 -> System.out.println("""
+                                Ihr Pfad (C:\\CU-ConsoleUtility \
+                                java src\\ConsoleUtilityItself.java (Windows) \
+                                oder /home/CU-ConsoleUtility java src\\ConsoleUtilityItself.java (Linux)) " +
+                                --zip,--zp (für Windows) / --tar.gz,--tr [ENTER] -> \
+                                Geben Sie den Namen der Zip-Datei (oder Tar.gz für Linux) ein: -> [ENTER] -> " +
+                                Geben Sie die Datei ein, die Sie in die Zip-Datei (oder Tar.gz) einbinden möchten: -> (Ihre Datei. Beispiel: test.txt) " +
+                                -> [ENTER] -> {WENN IHRE DATEI VORHANDEN} -> <MELDUNG> Zip-Datei wurde erfolgreich erstellt: (Pfad zu Ihrer Zip-Datei) -> " +
+                                {SONST} Diese Zip-Datei (Tar.gz) existiert nicht. Erstellen Sie eine neue: -> (Ihre Datei mit zip,tar.gz)""");
+                        case 12 -> System.out.println("Ihr Pfad (C:\\CU-ConsoleUtility " +
+                                "java src\\ConsoleUtilityItself.java (Windows) " +
+                                "oder /home/CU-ConsoleUtility java src\\ConsoleUtilityItself.java (Linux)) " +
+                                "--write,--wt -> [ENTER] -> " +
+                                "Schreiben Sie den Text oder die Daten: -> (Ihr Text) -> [ENTER] -> " +
+                                "Schreiben Sie den Dateinamen, in den die Daten geschrieben werden sollen: -> (Name Ihrer Datei) -> [ENTER] -> \" +\n" +
+                                "{WENN EXISTIERT} -> (Ihr Text wurde in die Datei geschrieben) {ELSE} -> Diese Datei existiert nicht. Erstellen Sie die neue:");
+                        case 13 -> System.out.println("""
+                                Ihr Pfad (C:\\CU-ConsoleUtility \
+                                java src\\ConsoleUtilityItself.java (Windows) " \
+                                oder /home/CU-ConsoleUtility java src\\ConsoleUtilityItself.java (Linux)) \
+                                --grep,--gp -> [ENTER] -> \
+                                Schreiben Sie die Datei, aus der Sie den Text beziehen möchten: -> (Ihre Datei. Beispiel: test.txt) -> [ENTER] -> " +
+                                {WENN EXISTIERT} -> Schreiben Sie das Wort oder den Text, der aus der Datei stammen soll: (Wort aus Ihrem Text) {ELSE} -> " +
+                                Diese Datei existiert nicht. Erstellen Sie eine neue -> (Neue Datei erstellen) -> [ENTER] -> Schreiben Sie den Text in die Datei: -> " +
+                                (Text in die Datei)""");
+                        case 14 -> System.out.println("Ihr Pfad (C:\\CU-ConsoleUtility " +
+                                "java src\\\\ConsoleUtilityItself.java (Windows) " +
+                                "oder /home/CU-ConsoleUtility java src\\ConsoleUtilityItself.java (Linux)) " +
+                                "--history / --hi -> [ENTER] -> (zeigt die Liste der Befehle an, die Sie im ConsoleUtility verwendet haben)");
+                        case 15 -> System.out.println("""
+                                Ihr Pfad (C:\\CU-ConsoleUtility \
+                                java src\\\\ConsoleUtilityItself.java (Windows) \
+                                oder /home/CU-ConsoleUtility java src\\ConsoleUtilityItself.java (Linux)) \
+                                --find / --fd -> [Eingabe] -> \
+                                Geben Sie das Verzeichnis ein, in dem Sie die Dateien suchen möchten: -> (Ihr Verzeichnis) -> [Eingabe] -> " +
+                                Geben Sie die Dateierweiterung für die Suche ein: -> (Ihre Dateierweiterung: Beispiel: .txt, .bin) -> [Eingabe] -> " +
+                                (zeigt alle Dateien/Kataloge mit einer bestimmten Erweiterung an)""");
+                        case 16 -> System.out.println("Ihr Pfad (C:\\CU-ConsoleUtility " +
+                                "java src\\\\ConsoleUtilityItself.java (Windows) " +
+                                "oder /home/CU-ConsoleUtility java src\\ConsoleUtilityItself.java (Linux)) " +
+                                "--lstcat / --ls -> [ENTER] -> " +
+                                "Geben Sie das Verzeichnis ein, in dem die Kataloge angezeigt werden sollen: -> (Ihr Verzeichnis) -> [ENTER] -> \" +\n" +
+                                "(zeigt alle Dateien/Kataloge im angegebenen Verzeichnis an)");
+                        case 17 -> System.out.println("""
+                                Ihr Pfad (C:\\CU-ConsoleUtility \
+                                java ConsoleUtilityItself.java (Windows) " +
+                                oder /home/CU-ConsoleUtility java src\\\\ConsoleUtilityItself.java (Linux)) " +
+                                --replace / --re -> [ENTER] -> " +
+                                Schreiben Sie die Datei, in der Sie die Zeichen ändern möchten: -> (Ihre Datei. Beispiel: test.txt) -> [ENTER] -> " +
+                                {IF EXISTS} -> Schreiben Sie das erste Zeichen, das Sie ändern möchten: (erstes Zeichen. Beispiel: c) -> [ENTER] -> " +
+                                Schreiben Sie das zweite Zeichen, das Sie ändern möchten: -> (zweites Zeichen. Beispiel: i) -> [ENTER] -> (ersetzt das erste Zeichen durch das zweite)""");
+                        case 18 -> System.out.println("""
+                                Ihr Pfad (C:\\CU-ConsoleUtility " 
+                                java srConsoleUtilityItself.java (Windows) " 
+                                oder /home/CU-ConsoleUtility java src\\ConsoleUtilityItself.java (Linux)) " 
+                                --crtdir / --cr -> [EINGABE] -> " 
+                                Geben Sie den Namen des Verzeichnisses ein: -> (Ihr Verzeichnis) -> [EINGABE] -> " 
+                                Geben Sie das Hauptverzeichnis ein: (Ihr Hauptverzeichnis) (Beispiel: C:\\Users\\... oder /home/...) -> [EINGABE] -> " 
+                                <MELDUNG> 'Das Verzeichnis wurde erstellt: (Ihr erstelltes Verzeichnis)'""");
+                        case 19 -> System.out.println("""
+                                Ihr Pfad (C:\\CU-ConsoleUtility " 
+                                java src\\ConsoleUtilityItself.java (Windows) " 
+                                oder /home/CU-ConsoleUtility java src\\\\ConsoleUtilityItself.java (Linux)) "                                 
+                                --candir / --ca -> [ENTER] -> " 
+                                Geben Sie das zu löschende Verzeichnis ein: (Ihr zu löschendes Verzeichnis) -> [ENTER] -> " 
+                                Das Verzeichnis (Ihr Verzeichnis) wurde erfolgreich gelöscht""");
+                        case 20 -> System.out.println("""
+                                Ihr Pfad (C:\\CU-ConsoleUtility " 
+                                java src\\ConsoleUtilityItself.java (Windows) " 
+                                oder /home/CU-ConsoleUtility java src\\\\ConsoleUtilityItself.java (Linux)) " 
+                                --exstdirs / --ex -> [ENTER] -> "
+                                (zeigt alle mit crtdir erstellten Verzeichnisse an)""");
+                        case 21 -> System.out.println("Ihr Pfad (C:\\CU-ConsoleUtility" +
+                                    " java src\\ConsoleUtilityItself.java (Windows)" +
+                                    "oder /home/CU-ConsoleUtility java src\\ConsoleUtilityItself.java (Linux)) " +
+                                    "--andriten / --and -> [ENTER] -> " +
+                                    "Schreiben eine datei welche wollen Sie fur richten in datei andern: (deine datei) -> " +
+                                    "[ENTER] -> Schreiben richten in octal system (Beispiel: 700): (richten mit octal system) -> [ENTER]" +
+                                " {IF ERFOLG} -> <MELDUNG> Richten fur datei: '(deine spreicherische datei)' waren anderen erfolgreich");
+                        case 22 -> System.out.println("Ihr Pfad (C:\\CU-ConsoleUtility" +
+                                                      " java src\\ConsoleUtilityItself.java (Windows)" +
+                                                      "oder /home/CU-ConsoleUtility java src\\ConsoleUtilityItself.java (Linux)) " +
+                                "--adverungen / --and -> [ENTER] -> Schreiben deine datei ohne verlanderung: (deine datei ohne verlanderung) [ENTER] -> " +
+                                "Schreiben eine verlanderung fur deine datei: (verlanderung dur deine datei. Beispiel: .txt) -> [ENTER]" +
+                                "Schreiben eine neue verlanderung due deine datei: (neue verlanderung fur deine datei. Beispiel: .bin) -> [ENTER] -> " +
+                                "{WENN ERFOLG} -> <MELDUNG> Die dateis verlanderung war andert erfolgreich");
+                        case 23 -> System.out.println("Ihr Pfad (C:\\CU-ConsoleUtility" +
+                        " java src\\ConsoleUtilityItself.java (Windows)" +
+                                "oder /home/CU-ConsoleUtility java src\\ConsoleUtilityItself.java (Linux)) " +
+                                "--symlink / --sym -> [ENTER] -> Schreiben Sie symbole link: (deine symbole link) -> [ENTER] -> " +
+                                "{WENN ERFOLG} -> <MELDUNG> Symbole link war erstellt erfolgreich: (ein weg zu deinem symbole link)");
+                        default -> System.err.println("Diese befehle existiert nicht oder es ist noch nicht standartisch in system");
+                    }
+                }
+                case "--andriten", "--and" -> {
+                    hinzufugenGeschichte((index) + " | " + arg);
+                    System.out.println("Schreiben eine datei welche wollen Sie fur richten in datei andern: ");
+                    String dateiName = operation.nextLine();
+                    Path weg = Path.of(dateiName);
+                    if(Files.exists(weg)) {
+                        String spreichernDateiName = dateiName, linie;
+                        try(BufferedReader lesenDatenVonDatei = new BufferedReader(new FileReader(dateiName))) {
+                            linie = lesenDatenVonDatei.readLine();
+                            if(linie.isEmpty()) {
+                                linie = "";
+                            }
+                        } catch (IOException ex) {
+                            throw new RuntimeException(ex.getLocalizedMessage());
+                        }
+                        Files.delete(weg);
+                        System.out.println("Schreiben richten in octal system (Beispiel: 700): ");
+                        String octalSystem = operation.nextLine();
+                        if(octalSystem.length() > 3) {
+                            System.err.println(RED + "Richten mussen nicht mehr als 3 nummeren sein" + RESET);
+                        } else {
+                            for(Character charNummeren : octalSystem.toCharArray()) {
+                                nummerRichten.add(charNummeren);
+                            }
+                            List<Integer> nummeren = new ArrayList<>();
+                            for(int i = 0; i < octalSystem.length(); ++i) {
+                                int toNumber = octalSystem.charAt(i) - 48;
+                                nummeren.add(toNumber);
+                            }
+                            for (Integer nummer : nummeren) {
+                                ergebnisRichten.add(richten.get(nummer));
+                            }
+                            String alleRichten = ergebnisRichten.getFirst() + ergebnisRichten.get(1) + ergebnisRichten.getLast();
+                            Set<PosixFilePermission> perms = PosixFilePermissions.fromString(alleRichten);
+                            FileAttribute<Set<PosixFilePermission>> attr = PosixFilePermissions.asFileAttribute(perms);
+                            Files.createFile(Path.of(spreichernDateiName),attr);
+                            try(BufferedWriter schreibenZuruckZuDatei = new BufferedWriter(new FileWriter(spreichernDateiName))) {
+                                schreibenZuruckZuDatei.write(linie);
+                            } catch (IOException aus) {
+                                throw new RuntimeException(aus.getLocalizedMessage());
+                            }
+                            System.out.println(GREEN + "Richten fur datei: '" + spreichernDateiName + "' waren anderen erfolgreich" + RESET);
+                        }
+                    }
+                }
+                case "--adverungen", "--adv" -> {
+                    hinzufugenGeschichte((index) + " | " + arg);
+                    String dateiName,neueDateiName = "",verlanderung,neueVerlanderung = "",wennExistiert,daten = "";
+                    System.out.println("Schreiben deine datei ohne verlanderung: ");
+                    dateiName = operation.nextLine();
+                    System.out.println("Schreiben eine verlanderung fur deine datei: ");
+                    verlanderung = operation.nextLine();
+                    wennExistiert = dateiName + verlanderung;
+                    Path path = Path.of(wennExistiert);
+                    if(Files.exists(path)) {
+                        try(BufferedReader lesenVonDatei = new BufferedReader(new FileReader(wennExistiert))) {
+                            String linie = lesenVonDatei.readLine();
+                            if(linie == null || linie.isEmpty()) {
+                                daten = " ";
+                            } else {
+                                daten = linie;
+                            }
+                        } catch (IOException ex) {
+                            throw new RuntimeException(ex.getLocalizedMessage());
+                        }
+                    } else {
+                        System.err.println(RED + "Diese datei existiert nicht" + RESET);
+                        System.exit(0);
+                    }
+                    Files.deleteIfExists(path);
+                    System.out.println("Schreiben eine neue verlanderung due deine datei: ");
+                    neueVerlanderung = operation.nextLine();
+                    if(!neueVerlanderung.startsWith(".")) {
+                        System.err.println(RED + "Verlanderungen mussen mit '.' starten" + RESET);
+                    } else {
+                        neueDateiName = dateiName + neueVerlanderung;
+                    }
+                    try(BufferedWriter schreibenZuruckZuDatei = new BufferedWriter(new FileWriter(neueDateiName))) {
+                        schreibenZuruckZuDatei.write(daten);
+                    } catch (IOException ex) {
+                        throw new RuntimeException(ex.getLocalizedMessage());
+                    }
+                    System.out.println(GREEN + "Die dateis verlanderung war andert erfolgreich" + RESET);
+                }
+                case "--symlink","--sym" -> {
+                    hinzufugenGeschichte((index) + " | " + arg);
+                    String symlink, direktorei;
+                    System.out.println("Schreiben eine direktorei fur welche Sie wollen symbole link erstellen: ");
+                    direktorei = operation.nextLine();
+                    Path weg = Path.of("Directory.txt");
+                    List<String> findenDirektorei = new ArrayList<>(Files.readAllLines(weg));
+                    String findischDirektorei = findenDirektorei.get(findenDirektorei.indexOf(direktorei) + 2);
+                    System.out.println(findischDirektorei);
+                    if(findischDirektorei.isEmpty()) {
+                        System.err.println(RED + "Diese direktorei existiert nicht" + RESET);
+                    } else {
+                        Path ziel = Path.of(findischDirektorei);
+                        System.out.println("Schreiben Sie symbole link: ");
+                        symlink = operation.nextLine();
+                        Files.createSymbolicLink(Path.of(symlink),ziel);
+                        System.out.println(GREEN + "Symbole link war erstellt erfolgreich: " + new File(symlink).getAbsolutePath() + RESET);
+                    }
+                }
                 case null, default -> System.err.println(RED + "Diese befehle existiert nicht" + RESET);
             }
         }
@@ -431,7 +720,11 @@ public class KonsoleDienstProgramm {
                         "--ersetzen       / --ers = ersetzen eine zeichne zu andere zeichne in text vom datei",
                         "--ertdir         / --ert = erstellen direktorei in System-Explorer",
                         "--lshdir         / --lsh = loschen direktorei vom System-Explorer",
-                        "--exstdirs       / --exs = analysieren alle direktoreis welche hat ein benutzer erstellt"
+                        "--exstdirs       / --exs = analysieren alle direktoreis welche hat ein benutzer erstellt",
+                        "--tldr           / --tld = anweisungen fur alles befehlen in diese KonsoleDienstProgramm",
+                        "--andriten       / --and = andern eine richten fur datei. Beispiel: 700",
+                        "--adverungen     / --adv = andern eine verlanderungen fur datei",
+                        "--symlink        / --sym = erstellen eine symbole linke fur datei"
                 )).forEach(System.out::println);
     }
     private static class KonsoleDienstProgrammsGBS extends JFrame {
